# robofin

./: LICENSE  MANIFEST.in  setup.cfg
.github/workflows/: publish_to_pypi.yml
robofin/: __init__.py  _version.py  bullet.py  collision.py  geometry.py  meshcat.py  point_cloud_tools.py  pointcloud.py  robot_constants.py  robots.py  samplers.py  torch_urdf.py
robofin/cache/point_cloud/franka/: franka_point_cloud_1024_128.npy  franka_point_cloud_2048_128.npy  franka_point_cloud_4096_128.npy
robofin/kinematics/: collision.py  cpu.py  fk.py  numba.py  torch.py
robofin/pointcloud/: numpy.py  torch.py
robofin/pointcloud/cache/franka/: deterministic_point_cloud_2048_10.npy  deterministic_point_cloud_2048_128.npy  fixed_point_cloud_1024.npy  fixed_point_cloud_1024_4096.npy  full_point_cloud_4096.npy
robofin/urdf/franka_panda/: hd_panda.urdf  panda.urdf
robofin/urdf/panda_hand/: panda.urdf  panda_black.urdf
tests/: test_samplers.py
urdf/panda_hand/: panda.urdf
