[metadata]
name = robofin
version = 0.0.2.3
description = A collection of robotics tools tailored to machine learning
long_description = "Robofin is a (somewhat disorganized) collection of high performance Python tools geared toward end-to-end robotic learning"
license = MIT
download_url = https://github.com/fishbotics/robofin/archive/refs/tags/v0.0.2.3.tar.gz

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pybullet
    numpy
    geometrout >= 0.1.0.6
    torch
    ikfast-pybind
    trimesh
    urchin >= 0.0.27
