[metadata]
name = robofin
description = A collection of robotics tools tailored to machine learning
long_description = "Robofin is a (somewhat disorganized) collection of high performance Python tools geared toward end-to-end robotic learning"
license = MIT
version = attr: robofin.__version__

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pybullet
    numpy
    geometrout >= 0.1.3
    torch
    ikfast-pybind
    trimesh >= 4.0.0
    urchin >= 0.0.27
